# GLEngine

./: .gitmodules  CMakeLists.txt  GLEngineConfig.cmake.in  OpenGLTestBed.sln  README.md
CMake/: CopyIfExists.cmake  FindEigen.cmake  FindGLEW.cmake  FindGLFW.cmake  FindGLM.cmake  Findassimp.cmake  Findtbb.cmake
OpenGLTestBed/: App.cpp  App.h  Camera.cpp  Camera.h  Engine.cpp  Engine.h  Material.cpp  Material.h  MathHelper.h  Mesh.cpp  Mesh.h  OpenGLTestBed.vcxproj  OpenGLTestBed.vcxproj.filters  ResourceLoader.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h  Utility.h
OpenGLTestBed/Content/: LuxoPhong.dae  RedUtahteapotAmbient.dae  TexturedPlane.dae  UtahTeapotPhongTextured.dae
OpenGLTestBed/Content/Shaders/: FragmentShader.glsl  NormalGeometryShader.glsl  NormalVertexShader.glsl  PhongFragmentShader.glsl  VertexShader.glsl
src/: AbstractMapper.cpp  AbstractMapper.h  AppendPolyData.h  CMakeLists.txt  Camera.h  Camera2D.h  Camera2DSmooth.h  CameraLookAt.h  CellData.h  CircleSource.cpp  CircleSource.h  ContactManifold.h  GLEngineConfig.cmake.in  Geometry2D.cpp  Geometry2D.h  Geometry3D.cpp  Geometry3D.h  GlyphPolyDataMapper.cpp  GlyphPolyDataMapper.h  ImageData.cpp  ImageData.h  ImageMapper.cpp  ImageMapper.h  KdTree.cpp  KdTree.h  KdTreePointLocator.h  MathHelper.cpp  MathHelper.h  PNGReader.h  PNGWriter.cpp  PlaneSource.h  PolyData.cpp  PolyData.h  PolyDataIntersects2D.cpp  PolyDataIntersects2D.h  PolyDataMapper.cpp  PolyDataMapper.h  PolyDataPointCloud.cpp  PolyDataPointCloud.h  PolyDataTriangulate.cpp  (+22 more)
src/Common/: AbstractMapper.cpp  AbstractMapper.h  Camera.h  Camera2D.h  CameraLookAt.h  CellData.h  Geometry2D.cpp  Geometry2D.h  GlyphPolyDataMapper.cpp  GlyphPolyDataMapper.h  ImageData.cpp  ImageDataResample.cpp  ImageDataResample.h  ImageMapper.cpp  ImageMapper.h  KdTree.cpp  MarchingSquares.cpp  PhongMaterial.h  PolyData.cpp  PolyData.h  PolyDataMapper.cpp  PolyDataMapper.h  PolyDataPointCloud.h  PolyDataReverse.h  PolyDataSignedDistanceField.cpp  PolyDataTriangulate.h  PrimitivesMapper.cpp  PrimitivesMapper.h  QuadTree.cpp  QuadTree.h  RenderWindow.cpp  RenderWindow.h  SkyMapper.cpp  SkyMapper.h  Timer.h  TrackballCameraInteractor.h  Types.h  WindowInteractor.h  stdNew.h
src/Core/: AbstractMapper.cpp  AbstractMapper.h  AppendPolyData.cpp  ArHosekSkyModelData_RGB.h  Geometry2D.cpp  Geometry2D.h  Geometry3D.cpp  Geometry3D.h  GlyphPolyDataMapper.cpp  GlyphPolyDataMapper.h  ImageData.cpp  ImageData.h  ImageDataResample.cpp  ImageDataResample.h  ImageDataShiftScale.cpp  ImageDataShiftScale.h  ImageMapper.cpp  ImageMapper.h  MarchingSquares.cpp  MarchingSquares.h  MathHelper.cpp  MathHelper.h  ParallelFor.h  PhongMaterial.h  PolyData.cpp  PolyData.h  PolyDataMapper.cpp  PolyDataMapper.h  PolyDataPointCloud.cpp  PolyDataPointCloud.h  PolyDataReverse.cpp  PolyDataSignedDistanceField.h  PolyDataSubdivision.cpp  PolyDataSubdivision.h  PolyDataTriangulate.cpp  PrimitivesMapper.cpp  PrimitivesMapper.h  PropertyMap.h  RenderWindow.cpp  RenderWindow.h  (+13 more)
src/DataSources/: CircleSource.cpp  PlaneSource.cpp  PlaneSource.h  RectangleSource.cpp  RectangularPrismSource.cpp  SphereSource.cpp  SphereSource.h
src/IO/: AssimpPolyReader.cpp  AssimpPolyReader.h  PNGReader.cpp  PNGReader.h  PNGWriter.cpp  PNGWriter.h  RawImageWriter.cpp  RawImageWriter.h
src/Rendering/: BilateralRBlurPass.cpp  BilateralRBlurPass.h  BilateralRgbBlurPass.cpp  BilateralRgbBlurPass.h  CameraPass.cpp  CameraPass.h  ComputeNormalsPass.cpp  ComputeNormalsPass.h  CubeMapPass.cpp  CubeMapPass.h  DeferredRenderer.cpp  DeferredRenderer.h  DepthToRPass.cpp  DepthToRPass.h  DepthToRgbPass.cpp  DepthToRgbPass.h  FramePass.cpp  FramePass.h  Framebuffer.cpp  Framebuffer.h  FramebufferAttachment.cpp  FramebufferAttachment.h  GeometryPass.cpp  GeometryPass.h  LightingPass.cpp  LightingPass.h  RayTraceRenderer.cpp  RayTraceRenderer.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  Shader.h  ShaderProgram.h  Shaders.cpp  Shaders.h  UnsharpMaskingPass.cpp  UnsharpMaskingPass.h
src/Scene/: Component.h  MapperComponent.h  PolyRenderer.cpp  PolyRenderer.h  PolyRenderer2d.cpp  PolyRenderer2d.h  PolySource.cpp  PolySource.h  Scene.cpp  Scene.h  SceneObject.h
src/Shaders/Common/: hosekWilkieFS.glsl  hosekWilkieVS.glsl
src/Shaders/DeferredRasterize/GlyphPolyDataMapper/: normalColorFS.glsl  normalFS.glsl
src/Shaders/DeferredRasterize/ImageMapper/: tex1FS.glsl
src/Shaders/DeferredRasterize/Passes/: bilateralRBlurPass.glsl  lightPassFS.glsl  unsharpMaskingPass.glsl
src/Shaders/DeferredRasterize/PolyDataMapper/: pointFS.glsl
src/Shaders/DirectRasterize/GlyphPolyDataMapper/: normalFS.glsl
src/Shaders/DirectRasterize/ImageMapper/: mappings.csv  tex1FS.glsl
src/Shaders/DirectRasterize/PolyDataMapper/: colorFS.glsl  normalColorFS.glsl  normalFS.glsl  normalTex3FS.glsl  normalTexVS.glsl  pointFS.glsl  tex3FS.glsl
src/Shaders/DirectRasterize/PrimitivesMapper/: mappings.csv  primFS.glsl  primGS.glsl  primVS.glsl
src/Sources/: CircleSource.cpp  CircleSource.h  PlaneSource.cpp  PlaneSource.h  QuadSource.cpp  QuadSource.h  RectangleSource.cpp  RectangleSource.h  RectangularPrismSource.cpp  RectangularPrismSource.h  SphereSource.cpp
